fix spacing again

--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -89,6 +89,15 @@ tr.sortable-drag , tr.sortable-ghost{
     }
 }
 
+@media screen and (min-width:768px){
+    .customcategorygrid{
+        min-width:320px;
+    }
+}
+
+
+
+
 .rotate-me{
     -webkit-animation:spin 2.5s linear infinite;
     -moz-animation:spin 2.5s linear infinite;
@@ -98,3 +107,4 @@ tr.sortable-drag , tr.sortable-ghost{
 @-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
 @-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
 @keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
+
